--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
